adapting to jigsaw's modular java